test/Feature/Output/ubsan_unsigned_overflow.c.tmp.klee-out/test000001.overflow.err
Error: overflow on unsigned addition
File: /home/sanghu/TracerX/tracerx/test/Feature/ubsan_unsigned_overflow.c
Line: 20
assembly.ll line: 50
Stack: 
	#000000050 in main () at /home/sanghu/TracerX/tracerx/test/Feature/ubsan_unsigned_overflow.c:20
