test/Feature/Output/ubsan_unsigned_overflow.c.tmp.klee-out/test000001.pc
array x[4] : w32 -> w8 = symbolic
array y[4] : w32 -> w8 = symbolic
(query [(Ult 4294967295
              (Add w64 (ZExt w64 (ReadLSB w32 0 x))
                       (ZExt w64 (ReadLSB w32 0 y))))]
        false)
